--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -10,10 +10,11 @@
     
 }
 .logo {
-    padding-left:20%;
+    padding-left:15%;
     top:20px;
     max-width: 100%;
     max-height: 100%;
+    padding-bottom: 20px;
 }
 .search hr{
     color: #324950;
@@ -78,7 +79,7 @@
 .nav2 a, .nav2 a:visited, nav2 a:active {
     color: white;
     text-decoration: none;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Slab', sans-serif;
     padding-top: 5px;
     font-weight: 400;
 }
@@ -95,7 +96,7 @@
     word-spacing: 10px;
 }
 .footer {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Slab', sans-serif;
     height: 50px;
     width: 100%;
     background-color: #324950;
