--- a/css/style1.css
+++ b/css/style1.css
@@ -46,7 +46,7 @@
 }
 .flex-item p {
     padding-top: 20px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Slab', sans-serif;
     font-weight: 400;
     padding-bottom: 30px;
 }
@@ -62,14 +62,14 @@
     text-align: center;
     background-color: #57984C;
     font-size: 18px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Slab', sans-serif;
     color: white;
     font-weight: 700;
     border: 0px;
     transition: 0.6s linear;
 }
 .Maintext {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Slab', sans-serif;
     padding-top: 220px;
     font-size: 48px;
     color: #735440;
@@ -110,7 +110,7 @@ a{
     padding-top: 100px;
     padding-left: 20px;
     filter: drop-shadow(0px 20px 40px rgba(0, 0, 0, 0.25));
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Slab', sans-serif;
     font-weight: 400;
 }
 
@@ -141,7 +141,7 @@ a{
     background-color: #EDEDED;
     height: 640px;
     width: 100%;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Slab', sans-serif;
     font-weight: 400;
     align-items: center;
     flex-direction: column;
